Fix z-indexing of recent posts on home page

--- a/web/app/themes/brian-thompson/assets/styles/helpers/_variables.scss
+++ b/web/app/themes/brian-thompson/assets/styles/helpers/_variables.scss
@@ -26,13 +26,14 @@ $z-footer: 200;
 $z-hamburger: 200;
 $z-lets-start: 195;
 $z-recent-posts: 190;
+$z-category-nav: 190;
 $z-dots: 175;
 $z-nav: 170;
 $z-floater-image-lines: 160;
 $z-floater-image-blinds: 155;
 $z-floater-image: 150;
 $z-nav-bg: 100;
-$z-category-nav: 90;
+$z-recent-posts-home: 0;
 $z-lines: -100;
 $z-inline-image: -150;
 
