--- a/web/app/themes/brian-thompson/assets/styles/pages/_home.scss
+++ b/web/app/themes/brian-thompson/assets/styles/pages/_home.scss
@@ -194,7 +194,7 @@
       width: $col * 2;
       margin-top: 285px;
       left: 3 * $col;
-      z-index: $z-recent-posts;
+      z-index: $z-recent-posts-home;
     }
     @include min-screen(1000px) {
       position: absolute;
